New endpoint register
